[package]
name = "adventofcode2023"
version = "0.23.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true

[dependencies]
anyhow = "1.0.75"
ariadne = "0.3.0"
chrono = "0.4.31"
chumsky = "1.0.0-alpha.6"
clap = { version = "4.4.8", features = ["derive", "string", "env"] }
cookie_store = "0.20.0"
dialoguer = "0.11.0"
either = "1.9.0"
integer-sqrt = "0.1.5"
itertools = "0.12.0"
num-integer = "0.1.45"
priority-queue = "1.3.2"
rayon = "1.8.0"
scraper = "0.18.1"
tap = "1.0.1"
ureq = { version = "2.9.1", features = ["cookies"] }
url = "2.5.0"
